--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             padding: 40px;
             position: relative;
         }
-        .node_title:before {
+        .node .node .node_title:before {
             content: "";
             position: absolute;
             top: 20px;
